<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">"Event "</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="googleGplus">G+</string>
    <string name="facebook_button">facebook</string>
    <string name="twitter_button">twitter</string>
    <string name="login_button">login</string>
    <string name="button_loggin">LogIn</string>
    <string name="loginButton">login</string>
    <string name="bttn_login">LogIn</string>
    <string name="title_activity_schedule">Schedule</string>
    <string name="information_for_the_event">Information</string>
    <string name="the_agenda_event">Agenda</string>
    <string name="twitter_feed">twitterfeed</string>
    <string name="about_speakers">Speakers</string>

</resources>
