<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MainActivity"
    android:background="@drawable/imagcool">

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/googleGplus"
        android:id="@+id/spks"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="114dp"
        android:background="#dd4b39"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/facebook_button"
        android:id="@+id/fb"
        android:layout_centerVertical="true"
        android:layout_alignLeft="@+id/spks"
        android:layout_alignStart="@+id/spks"
        android:background="#ff3b5998"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/twitter_button"
        android:id="@+id/twitter"
        android:layout_below="@+id/fb"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="59dp"
        android:background="#00aced"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/click"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:background="#ff4fff3f"
        android:text="@string/bttn_login"
        android:singleLine="false"/>
</RelativeLayout>
