<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="moringaschool.com.event.Schedule"
    android:background="@android:color/holo_blue_light">


    <GridLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        >

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/about_speakers"
            android:id="@+id/button"
            android:layout_row="0"
            android:layout_column="0"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/twitter_feed"
            android:id="@+id/twtfd"
            android:layout_row="1"
            android:layout_column="0"
            android:singleLine="false"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/information_for_the_event"
            android:id="@+id/in4m"
            android:layout_row="1"
            android:layout_column="2"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/the_agenda_event"
            android:id="@+id/agnda"
            android:layout_row="0"
            android:layout_column="2"
            android:singleLine="false"
            android:gravity="center_vertical"/>

    </GridLayout>
</RelativeLayout>
